WEB | CONFIG | feat: create basic language change configuration

--- a/projects/web/templates/base.html.twig
+++ b/projects/web/templates/base.html.twig
@@ -18,6 +18,9 @@
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 		<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
+		{# Alpine.js #}
+		<script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
