WEB | TRANSLATE | create language packs for the hero, nav and footer

--- a/projects/web/templates/components/Footer.html.twig
+++ b/projects/web/templates/components/Footer.html.twig
@@ -6,7 +6,7 @@
                PetFinder
             </h3>
             <p class="mt-2 text-gray-400">
-               Conectando familias con sus mascotas perdidas desde 2025
+               {{ 'footer.tagline'|trans }}
             </p>
          </div>
       </div>
